--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -259,7 +259,7 @@ section input:focus{
 }
 
 .poisk{
-    background-image: url(images/bg1.jpg);
+    background-image: url(css_img/bg1.jpg);
     background-size: 100%;
     padding: 20px;
 }
@@ -289,7 +289,7 @@ section input:focus{
 
 .tez_k{
     height: 150px;
-    background-image: url(images/kruglyash.svg);
+    background-image: url(css_img/kruglyash.svg);
     background-size: 100%;
     background-repeat: no-repeat;
     background-size: contain;
@@ -300,7 +300,7 @@ section input:focus{
 
 .tez_m{
     height: 150px;
-    background-image: url(images/karta.png);
+    background-image: url(css_img/karta.png);
     background-size: 100%;
     background-repeat: no-repeat;
     background-size: contain;
@@ -332,7 +332,7 @@ section input:focus{
 }
 
 .vrachi{
-    background-image: url(images/bg1.jpg);
+    background-image: url(css_img/bg1.jpg);
     background-size: 100%;
     padding: 20px;
 }
@@ -421,4 +421,60 @@ section input:focus{
 
 .card {
     height: 100%;
+}
+
+.modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 99998;
+    background-color: rgba(0, 0, 0, .3);
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    overflow-y: auto;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity .4s, visibility .4s;
+}
+
+.modal_box {
+    position: relative;
+    max-width: 500px;
+    padding: 45px;
+    z-index: 1;
+    margin: 30px 15px;
+    background-color: white;
+    box-shadow: 0px 0px 17px -7px rgba(34, 60, 80, 0.2);
+    transform: scale(0);
+    transition: transform .8s;
+}
+
+.close_modal {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    border: none;
+    background-color: transparent;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.close_modal svg path {
+    transition: fill .4s;
+}
+
+.close_modal:hover svg path {
+    fill: var(--color-blue);
+}
+
+.modal.open {
+    visibility: visible;
+    opacity: 1;
+}
+
+.modal.open .modal_box {
+    transform: scale(1);
 }
