--- a/templates/index.html
+++ b/templates/index.html
@@ -252,7 +252,7 @@
     </footer>
 
     <section class="modal" id="modal_id">
-        <div class="modal_box">
+        <div class="container modal_box">
             <button class="close_modal" id="close_modal_id">
                 <svg width="23" height="25" viewBox="0 0 23 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M2.09082 0.03125L22.9999 22.0294L20.909 24.2292L-8.73579e-05 2.23106L2.09082 0.03125Z"
@@ -260,13 +260,16 @@
                     <path d="M0 22.0295L20.9091 0.0314368L23 2.23125L2.09091 24.2294L0 22.0295Z" fill="#333333" />
                 </svg>
             </button>
-            <img src="static/images/logo.png" alt="logo"/>
+            <div class="d-flex justify-content-center">
+                <img src="static/images/logo.png" alt="logo"/>
+            </div>
             <h2>Авторизация</h2>
-
             <form name="signup" action="/" method="POST">
-                <div>
+                <div class="auth">
                     <input type="text" name="username" placeholder="Логин">
                     <input type="password" name="password" placeholder="Пароль">
+                </div>
+                <div class="sub d-flex justify-content-center">
                     <input type="submit" name="signup" value="Войти">
                 </div>
             </form>
