Сделал регистрацию и отловщик ошибки 401, пока работает криво

--- a/templates/page_not_found.html
+++ b/templates/page_not_found.html
@@ -5,7 +5,7 @@
     <div class="page_not_found">
       <h1>Страница не найдена, вернуться на <a href="{{url_for('index')}}">главную страницу</a></h1>
       <div class="d-flex justify-content-center">
-        <img src="static/images/3d_chel.png" alt="3d_chel">
+        <img src="static/images/3d_chel.png" alt="3d_chel" width="50%">
       </div>
     </div>
   </div>
