--- a/templates/index.html
+++ b/templates/index.html
@@ -122,7 +122,7 @@
             <div class="row">
                 <div class="tez_k col-3 d-flex">
                     <p>
-                        c <strong>2023</strong> года<br>на рынке медецинских услуг
+                        c <strong>2023</strong> года<br>на рынке медицинских услуг
                     </p>
                 </div>
                 <div class="tez_k col-3 d-flex">
@@ -137,7 +137,7 @@
                 </div>
                 <div class="tez_m col-3 d-flex">
                     <p>
-                        <strong>3</strong> города<br><strong>7</strong> медецинских центров
+                        <strong>3</strong> города<br><strong>7</strong> медицинских центров
                     </p>
                 </div>
             </div>
