--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,11 @@
     <title>{% block title %}{{ title }}{% endblock title %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-    <link rel="apple-touch-icon" sizes="180x180" href="static/images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="static/images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="static/images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="static/images/favicon/site.webmanifest">
-    <link rel="mask-icon" href="static/images/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='images/favicon/apple-touch-icon.png') }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='images/favicon/favicon-32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='images/favicon/favicon-16x16.png') }}">
+    <link rel="manifest" href="{{ url_for('static', filename='images/favicon/site.webmanifest') }}">
+    <link rel="mask-icon" href="{{ url_for('static', filename='images/favicon/safari-pinned-tab.svg') }}" color="#5bbad5">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/swiper.min.css')}}"/>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css')}}"/>
@@ -24,7 +24,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <a href="#" class="logo col-1">
-                        <img src="static/images/logo.png" alt="logo"/>
+                        <img src="{{ url_for('static', filename='images/logo.png')}}" alt="logo"/>
                     </a>
                     <div class="nazvanie col-2">
                         <a href="#">
@@ -38,7 +38,7 @@
                         <a href="#">Отзывы</a>
                     </nav>
                     <div class="nomer col-2 d-flex">
-                        <img src="static/images/phone.svg"/>
+                        <img src="{{ url_for('static', filename='images/phone.svg')}}"/>
                         <p>+7 (905) 484-67-05</p>
                     </div>
                     <button class="col-2 justify-content-end" id="open_form">
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </div>
-        <script defer src="static/js/header.js"></script>
+        <script defer src="{{ url_for('static', filename='js/header.js')}}"></script>
     </header>
 
     {% block content %}
@@ -60,11 +60,11 @@
                 <div class="svyaz col-4 justify-content-start">
                     <p>Для коммерческих запросов:</p>
                     <div class="d-flex">
-                        <img src="static/images/phone.svg"/>
+                        <img src="{{ url_for('static', filename='images/phone.svg')}}"/>
                         <p>+7 (905) 484-67-05</p>
                     </div>
                     <div class="d-flex">
-                        <img src="static/images/envelope.svg"/>
+                        <img src="{{ url_for('static', filename='images/envelope.svg')}}"/>
                         <p>pg_les_bratskoe@gmail.com</p>
                     </div>
                 </div>
@@ -72,22 +72,22 @@
                     <p>Мы в соцсетях:</p>
                     <div>
                         <a href="#">
-                            <img src="static/images/telegram.svg" alt="Telegram"/>@klinika_bagirova
+                            <img src="{{ url_for('static', filename='images/telegram.svg')}}" alt="Telegram"/>@klinika_bagirova
                         </a>
                     </div>
                     <div>
                         <a href="#">
-                            <img src="static/images/instagram.svg" alt="Instagram"/>@bagirov_lechit
+                            <img src="{{ url_for('static', filename='images/instagram.svg')}}" alt="Instagram"/>@bagirov_lechit
                         </a>
                     </div>
                     <div>
                         <a href="#">
-                            <img src="static/images/whatsapp.svg" alt="Whatsapp"/>@izmaylovskaya_bagirov
+                            <img src="{{ url_for('static', filename='images/whatsapp.svg')}}" alt="Whatsapp"/>@izmaylovskaya_bagirov
                         </a>
                     </div>
                     <div>
                         <a href="#">
-                            <img src="static/images/twitter.svg" alt="Twitter"/>@na_prieme_u_bagirova
+                            <img src="{{ url_for('static', filename='images/twitter.svg')}}" alt="Twitter"/>@na_prieme_u_bagirova
                         </a>
                     </div>
                 </div>
