--- a/templates/index.html
+++ b/templates/index.html
@@ -1,95 +1,18 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Клиника «Измайловская» им. А.С. Багирова</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-    <link rel="apple-touch-icon" sizes="180x180" href="static/images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="static/images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="static/images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="static/images/favicon/site.webmanifest">
-    <link rel="mask-icon" href="static/images/favicon/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/swiper.min.css')}}"/>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css')}}"/>
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-</head>
+{% extends 'base.html' %}
 
-<body>
-    <header>
-        <div class="header container-fluid">
-            <div class="container">
-                <div class="row align-items-center">
-                    <a href="#" class="logo col-1">
-                        <img src="static/images/logo.png" alt="logo"/>
-                    </a>
-                    <div class="nazvanie col-2">
-                        <a href="#">
-                            Клиника <code>«Измайловская»</code> им. А.С. Багирова
-                        </a>
-                    </div>
-                    <nav class="col-5 d-flex justify-content-around">
-                        <a href="#">Врачи</a>
-                        <a href="#">Услуги</a>
-                        <a href="#">Расписание</a>
-                        <a href="#">Отзывы</a>
-                    </nav>
-                    <div class="nomer col-2 d-flex">
-                        <img src="static/images/phone.svg"/>
-                        <p>+7 (905) 484-67-05</p>
-                    </div>
-                    <button class="col-2 justify-content-end" id="open_form">
-                        <p>Личный кабинет</p>
-                    </button>
-                </div>
-            </div>
-        </div>
-        <script defer src="static/js/header.js"></script>
-    </header>
-
+{% block content %}
     <main class="uslugi container-fluid">
         <div class="container">
             <h2>Услуги клиники</h2>
             <div class="boxes row align-items-center">
+                {% for ser in services %}
                 <div class="box col-2">
-                    <a href="#"><img src="static/images/skoraya.png" alt="skoraya"/></a>
+                    <a href="#"><img src="{{ url_for('static', filename='images/{}'.format(ser['img'])) }}" alt="{{ ser['img'] }}"/></a>
                     <div class="d-flex justify-content-center">
                         <a href="#">Диагностика</a>
                     </div>
                 </div>
-                <div class="box col-2">
-                    <a href="#"><img src="static/images/Vyzov-vracha-na-dom.png" alt="Vyzov-vracha-na-dom"/></a>
-                    <div class="d-flex justify-content-center">
-                        <a href="#">Вызов врача на дом</a>
-                    </div>
-                </div>
-                <div class="box col-2">
-                    <a href="#"><img src="static/images/Vzroslaya-stomatologiya.png" alt="Vzroslaya-stomatologiya"/></a>
-                    <div class="d-flex justify-content-center">
-                        <a href="#">Взрослая стоматология</a>
-                    </div>
-                </div>
-                <div class="box col-2">
-                    <a href="#"><img src="static/images/Detskaya-stomatologiya.png" alt="Detskaya-stomatologiya"/></a>
-                    <div class="d-flex justify-content-center">
-                        <a href="#">Детская стоматология</a>
-                    </div>
-                </div>
-                <div class="box col-2">
-                    <a href="#"><img src="static/images/Analizy.png" alt="Analizy"/></a>
-                    <div class="d-flex justify-content-center">
-                        <a href="#">Анализы</a>
-                    </div>
-                </div>
-                <div class="box col-2">
-                    <a href="#"><img src="static/images/CHekapy.png" alt="CHekapy"/></a>
-                    <div class="d-flex justify-content-center">
-                        <a href="#">Комплексная программа</a>
-                    </div>
-                </div>           
+                {% endfor %}
             </div>
         </div>
     </main>
@@ -109,11 +32,11 @@
                 </ul>
                 </div>
                 <div class="d-flex col-9 justify-content-end">
-                    <img src="static/images/3d_chel.png" alt="3d_chel">
+                    <img src="{{ url_for('static', filename='images/3d_chel.png') }}" alt="3d_chel">
                 </div>
             </div>
         </div>
-        <script defer src="static/js/search.js"></script>
+        <script defer src="{{ url_for('static', filename='js/search.js') }}"></script>
     </section>
 
     <sectition class="tezis">
@@ -154,7 +77,7 @@
                         <div class="okno swiper-slide">
                             <article class="card">
                                 <div class="card__image">
-                                    <img src="static/images/swiper/{{ doc['img'] }}.jpg" alt="ded">
+                                    <img src="{{ url_for('static', filename='images/swiper/{}'.format(doc['img'])) }}" alt="{{ doc['img'] }}">
                                 </div>
                                 <div class="card__content">
                                     <h3 class="card__title">{{ doc['name'] }}</h3>
@@ -168,8 +91,8 @@
                 </div>
             </div>
         </div>
-        <script defer src="static/js/swiper.min.js"></script>
-        <script defer src="static/js/wrapper.js"></script>
+        <script defer src="{{ url_for('static', filename='js/swiper.min.js') }}"></script>
+        <script defer src="{{ url_for('static', filename='js/wrapper.js') }}"></script>
     </section>
 
     <section class="karta">
@@ -177,79 +100,10 @@
             <h2>Наши клиники на карте</h2>
             <div id="map_id" class="map">
                 <script defer src="https://api-maps.yandex.ru/2.1/?apikey=7850113b-ad89-468a-8eeb-aca88ecd78e1&lang=ru_RU" type="text/javascript"></script>
-                <script defer src="static/js/map.js"></script>
+                <script defer src="{{ url_for('static', filename='js/map.js') }}"></script>
             </div>
         </div> 
     </section>
-
-    <footer class="container-fluid">
-        <div class="container">
-            <div class="verh row align-items-center">
-                <div class="svyaz col-4 justify-content-start">
-                    <p>Для коммерческих запросов:</p>
-                    <div class="d-flex">
-                        <img src="static/images/phone.svg"/>
-                        <p>+7 (905) 484-67-05</p>
-                    </div>
-                    <div class="d-flex">
-                        <img src="static/images/envelope.svg"/>
-                        <p>pg_les_bratskoe@gmail.com</p>
-                    </div>
-                </div>
-                <div class="ss col-4 justify-content-start">
-                    <p>Мы в соцсетях:</p>
-                    <div>
-                        <a href="#">
-                            <img src="static/images/telegram.svg" alt="Telegram"/>@klinika_bagirova
-                        </a>
-                    </div>
-                    <div>    
-                        <a href="#">
-                            <img src="static/images/instagram.svg" alt="Instagram"/>@bagirov_lechit
-                        </a>
-                    </div>
-                    <div>    
-                        <a href="#">
-                            <img src="static/images/whatsapp.svg" alt="Whatsapp"/>@izmaylovskaya_bagirov
-                        </a>
-                    </div>
-                    <div>
-                        <a href="#">
-                            <img src="static/images/twitter.svg" alt="Twitter"/>@na_prieme_u_bagirova
-                        </a>
-                    </div>
-                </div>
-                <div class="dan_ob_org col-4 justify-content-start">
-                    <p>Данные об организации:</p>
-                    <div>
-                        <p>
-                            Юридический адрес: Москва,<br>
-                            Измайловский проспект, дом 73А<br>
-                            ООО “Клиника «Измайловская» им. А.С. Багирова”<br>
-                            ИНН: 5525521517<br>
-                            ОГРН: 1152022354020
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="sered">
-                <div class="licens">
-                    <p>Лицензия № ПГ19-12345-19/88888888 от 20.11.2021г. Копирование, тиражирование, а равно иное использование материалов, размещенных на klinikaizmaylovskaya.ru возможно только с письменного разрешения правообладателя.</p>
-                </div>
-                <div class="oferta">
-                    <p>Обращаем ваше внимание на то, что данный интернет-сайт носит исключительно информационный характер и ни при каких условиях информационные материалы и цены, размещенные на сайте, не являются публичной офертой, определяемой положениями Статьи 437 Гражданского кодекса РФ.</p>
-                </div>
-            </div>
-            <div class="niz row align-items-center">
-                <div class="col-8 justify-content-start">
-                    <p>ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ. НЕОБХОДИМА КОНСУЛЬТАЦИЯ СПЕЦИАЛИСТА</p>
-                </div>
-                <div class="col-4 justify-content-start">
-                    <p>© 2023 Клиника «Измайловская» им. А.С. Багирова, Все права защищены</p>
-                </div>
-            </div>
-        </div>
-    </footer>
 
     <section class="modal" id="modal_id">
         <div class="container modal_box">
@@ -261,7 +115,7 @@
                 </svg>
             </button>
             <div class="d-flex justify-content-center">
-                <img src="static/images/logo.png" alt="logo"/>
+                <img src="{{ url_for('static', filename='images/logo.png') }}" alt="logo"/>
             </div>
             <h2>Авторизация</h2>
             <form name="signup" action="/" method="POST">
@@ -275,6 +129,5 @@
             </form>
         </div>
     </section>
-    <script defer src="static/js/modal.js"></script>
-</body>
-</html>
+    <script defer src="{{ url_for('static', filename='js/modal.js') }}"></script>
+{% endblock content %}
