--- a/templates/page_not_found.html
+++ b/templates/page_not_found.html
@@ -1,12 +1,29 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <div class="container">
-    <div class="page_not_found">
-      <h1>Страница не найдена, вернуться на <a href="{{ url_for('index') }}">главную страницу</a></h1>
-      <div class="d-flex justify-content-center">
-        <img src="{{ url_for('static', filename='images/3d_chel.png') }}" alt="3d_chel" width="50%">
-      </div>
+    <div class="container">
+        <div class="page_not_found">
+            <h1>Страница не найдена, вернуться на <a href="{{ url_for('index') }}">главную страницу</a></h1>
+            <div class="d-flex justify-content-center">
+                <img src="{{ url_for('static', filename='images/3d_chel.png') }}" alt="3d_chel" width="50%">
+            </div>
+        </div>
     </div>
-  </div>
+
+    <section class="modal" id="modal_id">
+        <div class="container modal_box">
+            <button class="close_modal" id="close_modal_id">
+                <svg width="23" height="25" viewBox="0 0 23 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M2.09082 0.03125L22.9999 22.0294L20.909 24.2292L-8.73579e-05 2.23106L2.09082 0.03125Z"
+                        fill="#333333" />
+                    <path d="M0 22.0295L20.9091 0.0314368L23 2.23125L2.09091 24.2294L0 22.0295Z" fill="#333333" />
+                </svg>
+            </button>
+            <div class="d-flex justify-content-center">
+                <img src="{{ url_for('static', filename='images/3d_chel.png') }}" alt="3d_chel" width="50%">
+            </div>
+            <h2>Страница не найдена, вернуться на <a href="{{ url_for('index') }}">главную страницу</a></h2>
+        </div>
+    </section>
+    <script defer src="{{ url_for('static', filename='js/modal.js') }}"></script>
 {% endblock content %}
