Теперь три нажатии на лого со всех стрпниц переносит на лендинг, подключился к бд, добавил конфиг файл

--- a/templates/index.html
+++ b/templates/index.html
@@ -118,7 +118,7 @@
                 <img src="{{ url_for('static', filename='images/logo.png') }}" alt="logo"/>
             </div>
             <h2>Авторизация</h2>
-            <form name="signup" action="/" method="POST">
+            <form name="signup" action="/registration" method="POST">
                 <div class="auth">
                     <input type="text" name="username" placeholder="Логин">
                     <input type="password" name="password" placeholder="Пароль">
