--- a/templates/base.html
+++ b/templates/base.html
@@ -23,11 +23,11 @@
         <div class="header container-fluid">
             <div class="container">
                 <div class="row align-items-center">
-                    <a href="#" class="logo col-1">
+                    <a href="{{ url_for('index') }}" class="logo col-1">
                         <img src="{{ url_for('static', filename='images/logo.png')}}" alt="logo"/>
                     </a>
                     <div class="nazvanie col-2">
-                        <a href="#">
+                        <a href="{{ url_for('index') }}">
                             Клиника <code>«Измайловская»</code> им. А.С. Багирова
                         </a>
                     </div>
