--- a/templates/profile.html
+++ b/templates/profile.html
@@ -13,7 +13,7 @@
             <div class="d-flex justify-content-center">
                 <img src="{{ url_for('static', filename='images/3d_chel_opa.png') }}" alt="3d_chel_opa" width="80%">
             </div>
-            <h2>Личный кабинет пользователя {username}</h2>
+            <h2>Личный кабинет пользователя {{username}}</h2>
         </div>
     </section>
     <script defer src="{{ url_for('static', filename='js/modal.js') }}"></script>
