Сделал отдельные кнопки и формы для регистрации и входа, тыкаю бд и создание пользователей

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -72,6 +72,10 @@ header .header button{
     transition: 0.5s all ease;
 }
 
+#open_form2{
+    background: var(--color-green);
+}
+
 header .header button:hover{
     background: var(--color-lblue);
 }
