--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,5 +16,5 @@
             <h2>Личный кабинет пользователя {{username}}</h2>
         </div>
     </section>
-    <script defer src="{{ url_for('static', filename='js/modal.js') }}"></script>
+    <script defer src="{{ url_for('static', filename='js/modal1.js') }}"></script>
 {% endblock content %}
