--- a/templates/unauthorized.html
+++ b/templates/unauthorized.html
@@ -25,5 +25,5 @@
             <h2>Отказ в доступе, вернуться на <a href="{{ url_for('index') }}">главную страницу</a></h2>
         </div>
     </section>
-    <script defer src="{{ url_for('static', filename='js/modal.js') }}"></script>
+    <script defer src="{{ url_for('static', filename='js/modal1.js') }}"></script>
 {% endblock content %}
