--- a/templates/base.html
+++ b/templates/base.html
@@ -119,7 +119,7 @@
                     <p>ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ. НЕОБХОДИМА КОНСУЛЬТАЦИЯ СПЕЦИАЛИСТА</p>
                 </div>
                 <div class="col-4 justify-content-start">
-                    <p>© 2023 Клиника «Измайловская» им. А.С. Багирова, Все права защищены</p>
+                    <p>© 2023 Клиника «Измайловская» им. А.С. Багирова, Все права защищены.</p>
                 </div>
             </div>
         </div>
