--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <section class="modal" id="modal_id">
+    <section class="modal" id="modal_id1">
         <div class="container modal_box">
-            <button class="close_modal" id="close_modal_id">
+            <button class="close_modal" id="close_modal_id1">
                 <svg width="23" height="25" viewBox="0 0 23 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M2.09082 0.03125L22.9999 22.0294L20.909 24.2292L-8.73579e-05 2.23106L2.09082 0.03125Z"
                         fill="#333333" />
