--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,6 +14,17 @@
                 <img src="{{ url_for('static', filename='images/3d_chel_opa.png') }}" alt="3d_chel_opa" width="80%">
             </div>
             <h2>Личный кабинет пользователя {{username}}</h2>
+            <form name="registration" action="/registration" method="POST">
+                <div class="auth">
+                    <input type="text" name="username" placeholder="Логин">
+                    <input type="email" name="email" placeholder="email">
+                    <input type="password" name="password1" placeholder="Пароль">
+                    <input type="password" name="password2" placeholder="Повторите пароль">
+                </div>
+                <div class="sub d-flex justify-content-center">
+                    <input type="submit" name="signup" value="Зарегестрироваться">
+                </div>
+            </form>
         </div>
     </section>
     <script defer src="{{ url_for('static', filename='js/modal1.js') }}"></script>
